Renames the eb- prefix to js- to better account for the fact that not all of these classes are used to bind events.

--- a/src/styles/components/actions.scss
+++ b/src/styles/components/actions.scss
@@ -89,7 +89,7 @@
     }
 }
 
-.fatex-eb-edit-mode {
+.fatex-js-edit-mode {
     .fatex-actions--headline,
     .fatex-actions--skill {
         background: linear-gradient(90deg, rgba(47, 53, 66, 0) 0%, #2f3542 33%, #2f3542 100%);
