--- a/src/styles/components/sheet/configuration.scss
+++ b/src/styles/components/sheet/configuration.scss
@@ -9,7 +9,7 @@
     z-index: 5;
     color: var(--light-text-color, $light-text-color);
 
-    .fatex-eb-edit-mode & {
+    .fatex-js-edit-mode & {
         display: block;
     }
 
