--- a/system/templates/actor/character.hbs
+++ b/system/templates/actor/character.hbs
@@ -15,7 +15,7 @@
                     <header class="fatex-headline">
                         <h2 class="fatex-headline__text">{{localize "FAx.Sheet.Aspects"}}</h2>
                         <div class="fatex-actions fatex-actions--headline">
-                            <i class="fatex-eb-aspect-add fatex-actions__icon fa fa-plus"></i>
+                            <i class="fatex-js-aspect-add fatex-actions__icon fa fa-plus"></i>
                         </div>
                     </header>
 
@@ -27,7 +27,7 @@
                     <header class="fatex-headline">
                         <h2 class="fatex-headline__text">{{localize "FAx.Sheet.Consequences"}}</h2>
                         <div class="fatex-actions fatex-actions--headline">
-                            <i class="fatex-eb-consequence-add fatex-actions__icon fa fa-plus"></i>
+                            <i class="fatex-js-consequence-add fatex-actions__icon fa fa-plus"></i>
                         </div>
                     </header>
 
@@ -37,7 +37,7 @@
 
                 {{!--Tabs--}}
                 <section class="fatex-desk__tabs fatex-u-padding-std">
-                    <nav class="fatex-eb-tabs-navigation fatex-tabs-navigation">
+                    <nav class="fatex-js-tabs-navigation fatex-tabs-navigation">
                         <a class="fatex-tabs-navigation__item" data-tab="skills">
                             {{~localize "FAx.Sheet.Tabs.SkillsStunts"~}}
                         </a>
@@ -49,7 +49,7 @@
                         </a>
                     </nav>
 
-                    <div class="fatex-eb-tab-content fatex-u-full-height">
+                    <div class="fatex-js-tab-content fatex-u-full-height">
                         {{!--Skills & Stunts--}}
                         <div class="fatex-tab-content fatex-tab-content--skills tab" data-tab="skills">
                             {{> "systems/fatex/templates/actor/tabs/skills.hbs"}}
@@ -78,7 +78,7 @@
                 <section class="fatex-item-grid fatex-u-padding-std">
                     {{> "systems/fatex/templates/components/stress.hbs"}}
                     
-                    <div class="fatex-eb-stress-add fatex-headline fatex-headline--center fatex-headline--helper">
+                    <div class="fatex-js-stress-add fatex-headline fatex-headline--center fatex-headline--helper">
                         <h3 class="fatex-headline__text">+</h3>
                     </div>
                 </section>
