--- a/system/templates/apps/template-actors-picker.hbs
+++ b/system/templates/apps/template-actors-picker.hbs
@@ -1,5 +1,5 @@
 {{#*inline "centerPartial"}}
-    <div class="fatex-eb-template-header-button fatex-template-action">
+    <div class="fatex-js-template-header-button fatex-template-action">
         <span class="fatex-template-action__label">{{localize "FAx.Template.Picker.Configuration"}}</span>
         <i class="fas fa-cogs fatex-template-action__icon"></i>
     </div>
@@ -34,7 +34,7 @@
         </div>
 
         <div class="fatex-template__actions">
-            <span class="fatex-eb-empty-template fatex-button fatex-button--dark">
+            <span class="fatex-js-empty-template fatex-button fatex-button--dark">
                 <i class="fa fa-plus"></i>
                 <span>{{localize "FAx.Global.Actions.Create"}}</span>
             </span>
@@ -76,7 +76,7 @@
 
             <div class="fatex-template__actions">
                 <div
-                    class="fatex-eb-choose-template fatex-button fatex-button--dark"
+                    class="fatex-js-choose-template fatex-button fatex-button--dark"
                     data-template="{{template._id}}"
                 >
                     <i class="fa fa-file-medical"></i>
