--- a/system/templates/components/setup-actions.hbs
+++ b/system/templates/components/setup-actions.hbs
@@ -1,22 +1,22 @@
 <div class="fatex-setup-actions">
-    <span class="fatex-eb-clear-aspects fatex-button fatex-button--light{{#unless hasAspects}} fatex-u-disabled{{/unless}}">
+    <span class="fatex-js-clear-aspects fatex-button fatex-button--light{{#unless hasAspects}} fatex-u-disabled{{/unless}}">
         {{localize "FAx.Apps.Setup.Actions.Clear.Aspects"}}
     </span>
 
-    <span class="fatex-eb-clear-consequences fatex-button fatex-button--light{{#unless hasConsequences}} fatex-u-disabled{{/unless}}">
+    <span class="fatex-js-clear-consequences fatex-button fatex-button--light{{#unless hasConsequences}} fatex-u-disabled{{/unless}}">
         {{localize "FAx.Apps.Setup.Actions.Clear.Consequences"}}
     </span>
 
-    <span class="fatex-eb-clear fatex-button fatex-button--clear-all{{#unless hasConsequences}} fatex-u-disabled{{/unless}}">
+    <span class="fatex-js-clear fatex-button fatex-button--clear-all{{#unless hasConsequences}} fatex-u-disabled{{/unless}}">
         <i class="fa fa-skull-crossbones"></i>
         <span>{{localize "FAx.Apps.Setup.Actions.Clear.Everything"}}</span>
     </span>
 
-    <span class="fatex-eb-clear-skills fatex-button fatex-button--light{{#unless hasConsequences}} fatex-u-disabled{{/unless}}">
+    <span class="fatex-js-clear-skills fatex-button fatex-button--light{{#unless hasConsequences}} fatex-u-disabled{{/unless}}">
         {{localize "FAx.Apps.Setup.Actions.Clear.Skills"}}
     </span>
 
-    <span class="fatex-eb-clear-stress fatex-button fatex-button--light{{#unless hasConsequences}} fatex-u-disabled{{/unless}}">
+    <span class="fatex-js-clear-stress fatex-button fatex-button--light{{#unless hasConsequences}} fatex-u-disabled{{/unless}}">
         {{localize "FAx.Apps.Setup.Actions.Clear.Stress"}}
     </span>
 </div>
