--- a/system/templates/inline-sheet/character.hbs
+++ b/system/templates/inline-sheet/character.hbs
@@ -15,7 +15,7 @@
             {{/unless}}
         </h2>
 
-        <nav class="fatex-eb-tabs-navigation fatex-inline-tabs">
+        <nav class="fatex-js-tabs-navigation fatex-inline-tabs">
             <a class="fatex-inline-tabs__item" data-tab="aspects">
                 {{~localize "FAx.Sheet.Aspects"~}}
             </a>
@@ -27,7 +27,7 @@
             </a>
         </nav>
 
-        <div class="fatex-eb-tab-content fatex__inline_sheet__content">
+        <div class="fatex-js-tab-content fatex__inline_sheet__content">
             <section class="tab" data-tab="aspects">
                 <div class="fatex-desk__aspects fatex-desk__aspects--inline">
                     {{> "systems/fatex/templates/components/aspects.hbs"}}
