--- a/system/templates/item/consequence-sheet.hbs
+++ b/system/templates/item/consequence-sheet.hbs
@@ -7,7 +7,7 @@
 
     <div class="fatex-radio-group">
         <div
-            class="fatex-eb-radio-button fatex-radio-button{{#if (eq 0 data.type)}} fatex-radio-button--active{{/if}}"
+            class="fatex-js-radio-button fatex-radio-button{{#if (eq 0 data.type)}} fatex-radio-button--active{{/if}}"
             data-value="0"
             data-name="data.type"
             data-dtype="Number"
@@ -22,7 +22,7 @@
         </div>
 
         <div
-            class="fatex-eb-radio-button fatex-radio-button{{#if (eq 1 data.type)}} fatex-radio-button--active{{/if}}"
+            class="fatex-js-radio-button fatex-radio-button{{#if (eq 1 data.type)}} fatex-radio-button--active{{/if}}"
             data-value="1"
             data-name="data.type"
             data-dtype="Number"
