--- a/system/templates/actor/tabs/extras.hbs
+++ b/system/templates/actor/tabs/extras.hbs
@@ -3,16 +3,16 @@
         {{#each extras as |extra extraIndex|}}
             <div data-item-id="{{extra._id}}">
                 <header
-                    class="fatex-eb-sortable fatex-headline fatex-headline--fixed-icon"
+                    class="fatex-js-sortable fatex-headline fatex-headline--fixed-icon"
                     data-item-id="{{extra._id}}"
                 >
                     <h3 class="fatex-headline__text">{{extra.name}}</h3>
 
                     <div class="fatex-actions fatex-actions--headline">
-                        <i class="fatex-eb-item-sort fatex-actions__icon fa fa-sort"></i>
-                        <i class="fatex-eb-extra-settings fatex-actions__icon fa fa-cog" data-item="{{extra._id}}"></i>
-                        <i class="fatex-eb-extra-delete fatex-actions__icon fatex-u-delete fa fa-trash" data-item="{{extra._id}}"></i>
-                        <i class="fatex-eb-item-collapse fatex-actions__icon fatex-actions__icon--no-hide fa fa-chevron-up{{#if extra.data.collapsed}} fatex-actions__icon--reverse{{/if}}" data-item="{{extra._id}}"></i>
+                        <i class="fatex-js-item-sort fatex-actions__icon fa fa-sort"></i>
+                        <i class="fatex-js-extra-settings fatex-actions__icon fa fa-cog" data-item="{{extra._id}}"></i>
+                        <i class="fatex-js-extra-delete fatex-actions__icon fatex-u-delete fa fa-trash" data-item="{{extra._id}}"></i>
+                        <i class="fatex-js-item-collapse fatex-actions__icon fatex-actions__icon--no-hide fa fa-chevron-up{{#if extra.data.collapsed}} fatex-actions__icon--reverse{{/if}}" data-item="{{extra._id}}"></i>
                     </div>
                 </header>
 
@@ -26,7 +26,7 @@
             </div>
         {{/each}}
 
-        <div class="fatex-eb-extra-add fatex-headline fatex-headline--center fatex-headline--helper">
+        <div class="fatex-js-extra-add fatex-headline fatex-headline--center fatex-headline--helper">
             <h3 class="fatex-headline__text">+</h3>
         </div>
     </div>
