--- a/system/templates/actor/tabs/skills.hbs
+++ b/system/templates/actor/tabs/skills.hbs
@@ -3,17 +3,17 @@
         <h2>{{localize "FAx.Sheet.Skills"}}</h2>
 
         <div class="fatex-actions fatex-actions--section-heading">
-            <i class="fatex-eb-skill-sort-rank fatex-actions__icon fa fa-sort-numeric-down"></i>
-            <i class="fatex-eb-skill-sort-name fatex-actions__icon fa fa-sort-alpha-down"></i>
-            <i class="fatex-eb-skill-sort-reverse fatex-actions__icon fa fa-random"></i>
-            <i class="fatex-eb-skill-add fatex-actions__icon fa fa-plus"></i>
+            <i class="fatex-js-skill-sort-rank fatex-actions__icon fa fa-sort-numeric-down"></i>
+            <i class="fatex-js-skill-sort-name fatex-actions__icon fa fa-sort-alpha-down"></i>
+            <i class="fatex-js-skill-sort-reverse fatex-actions__icon fa fa-random"></i>
+            <i class="fatex-js-skill-add fatex-actions__icon fa fa-plus"></i>
         </div>
     </header>
 
     <div class="fatex-item-grid fatex-item-grid--skills{{#if options.enableColumns}} fatex-item-grid--two-column{{/if}}">
         {{#each skills as |skill skillIndex|}}
             <div
-                class="fatex-eb-sortable fatex-eb-skill fatex-skill fatex__input--icon"
+                class="fatex-js-sortable fatex-js-skill fatex-skill fatex__input--icon"
                 data-item-id="{{skill._id}}"
             >
                 <div class="fatex-headline">
@@ -29,14 +29,14 @@
 
                     <div class="fatex-actions fatex-actions--skill-secondary">
                         <span
-                            class="fatex-eb-skill-increment fatex-actions__icon fatex-actions__icon--secondary"
+                            class="fatex-js-skill-increment fatex-actions__icon fatex-actions__icon--secondary"
                             data-item="{{skill._id}}"
                         >
                             +
                         </span>
 
                         <span
-                            class="fatex-eb-skill-decrement fatex-actions__icon fatex-actions__icon--secondary"
+                            class="fatex-js-skill-decrement fatex-actions__icon fatex-actions__icon--secondary"
                             data-item="{{skill._id}}"
                         >
                             -
@@ -44,9 +44,9 @@
                     </div>
 
                     <div class="fatex-actions fatex-actions--skill">
-                        <i class="fatex-eb-item-sort fatex-actions__icon fa fa-sort"></i>
-                        <i class="fatex-eb-skill-settings fatex-actions__icon fa fa-cog" data-item="{{skill._id}}"></i>
-                        <i class="fatex-eb-skill-delete fatex-actions__icon fatex-u-delete fa fa-trash" data-item="{{skill._id}}"></i>
+                        <i class="fatex-js-item-sort fatex-actions__icon fa fa-sort"></i>
+                        <i class="fatex-js-skill-settings fatex-actions__icon fa fa-cog" data-item="{{skill._id}}"></i>
+                        <i class="fatex-js-skill-delete fatex-actions__icon fatex-u-delete fa fa-trash" data-item="{{skill._id}}"></i>
                     </div>
                 </div>
             </div>
