--- a/system/templates/actor/tabs/stunts.hbs
+++ b/system/templates/actor/tabs/stunts.hbs
@@ -3,7 +3,7 @@
         <h2>{{localize "FAx.Sheet.Stunts"}}</h2>
 
         <div class="fatex-actions fatex-actions--section-heading">
-            <span class="fatex-eb-stunt-add fatex-actions__icon fa fa-plus"></span>
+            <span class="fatex-js-stunt-add fatex-actions__icon fa fa-plus"></span>
         </div>
     </header>
 
@@ -14,16 +14,16 @@
                 data-item-id="{{stunt._id}}"
             >
                 <header
-                    class="fatex-headline fatex-headline--fixed-icon fatex-eb-sortable"
+                    class="fatex-headline fatex-headline--fixed-icon fatex-js-sortable"
                     data-item-id="{{stunt._id}}"
                 >
                     <h3 class="fatex-headline__text">{{stunt.name}}</h3>
 
                     <div class="fatex-actions fatex-actions--headline">
-                        <i class="fatex-eb-item-sort fatex-actions__icon fa fa-sort"></i>
-                        <i class="fatex-eb-stunt-settings fatex-actions__icon fa fa-cog" data-item="{{stunt._id}}"></i>
-                        <i class="fatex-eb-stunt-delete fatex-actions__icon fatex-u-delete fa fa-trash" data-item="{{stunt._id}}"></i>
-                        <i class="fatex-eb-item-collapse fatex-actions__icon fatex-actions__icon--no-hide fa fa-chevron-up{{#if stunt.data.collapsed}} fatex-actions__icon--reverse{{/if}}" data-item="{{stunt._id}}"></i>
+                        <i class="fatex-js-item-sort fatex-actions__icon fa fa-sort"></i>
+                        <i class="fatex-js-stunt-settings fatex-actions__icon fa fa-cog" data-item="{{stunt._id}}"></i>
+                        <i class="fatex-js-stunt-delete fatex-actions__icon fatex-u-delete fa fa-trash" data-item="{{stunt._id}}"></i>
+                        <i class="fatex-js-item-collapse fatex-actions__icon fatex-actions__icon--no-hide fa fa-chevron-up{{#if stunt.data.collapsed}} fatex-actions__icon--reverse{{/if}}" data-item="{{stunt._id}}"></i>
                     </div>
                 </header>
 
