--- a/system/templates/components/aspects.hbs
+++ b/system/templates/components/aspects.hbs
@@ -1,8 +1,8 @@
 {{#each aspects as |aspect aspectIndex|}}
-    <div class="fatex-eb-sortable fatex-item" data-item-id="{{aspect._id}}">
+    <div class="fatex-js-sortable fatex-item" data-item-id="{{aspect._id}}">
         <div class="fatex-u-pos-relative">
             <div
-                class="fatex-eb-aspect-input fatex-text-input"
+                class="fatex-js-aspect-input fatex-text-input"
                 data-placeholder="{{aspect.data.label}}"
                 contenteditable="true"
                 data-item-id="{{aspect._id}}"
@@ -11,9 +11,9 @@
             </div>
 
             <div class="fatex-actions fatex-actions--item">
-                <i class="fatex-eb-item-sort fatex-actions__icon fa fa-sort"></i>
-                <i class="fatex-eb-aspect-settings fatex-actions__icon fa fa-cog" data-item="{{aspect._id}}"></i>
-                <i class="fatex-eb-aspect-delete fatex-actions__icon fatex-u-delete fa fa-trash" data-item="{{aspect._id}}"></i>
+                <i class="fatex-js-item-sort fatex-actions__icon fa fa-sort"></i>
+                <i class="fatex-js-aspect-settings fatex-actions__icon fa fa-cog" data-item="{{aspect._id}}"></i>
+                <i class="fatex-js-aspect-delete fatex-actions__icon fatex-u-delete fa fa-trash" data-item="{{aspect._id}}"></i>
             </div>
 
             <label class="fatex-text-input__label">{{aspect.data.label}}</label>
