--- a/system/templates/components/consequences.hbs
+++ b/system/templates/components/consequences.hbs
@@ -1,11 +1,11 @@
 {{#each consequences as |consequence consequenceIndex|}}
     <div
-        class="fatex-eb-sortable fatex-item{{#if consequence.isCondition}} fatex-item--condition{{/if}}{{#if consequence.isDisabled}} fatex-u-disabled{{/if}}{{#if consequence.data.icon}} fatex-item--consequence{{/if}}"
+        class="fatex-js-sortable fatex-item{{#if consequence.isCondition}} fatex-item--condition{{/if}}{{#if consequence.isDisabled}} fatex-u-disabled{{/if}}{{#if consequence.data.icon}} fatex-item--consequence{{/if}}"
         data-item-id="{{consequence._id}}"
     >
         <div class="fatex-u-pos-relative">
             <div
-                class="fatex-eb-consequence-input fatex-text-input"
+                class="fatex-js-consequence-input fatex-text-input"
                 contenteditable="true"
                 data-item-id="{{consequence._id}}"
             >
@@ -13,9 +13,9 @@
             </div>
 
             <div class="fatex-actions fatex-actions--item">
-                <i class="fatex-eb-item-sort fatex-actions__icon fa fa-sort"></i>
-                <i class="fatex-eb-consequence-settings fatex-actions__icon fa fa-cog" data-item="{{consequence._id}}"></i>
-                <i class="fatex-eb-consequence-delete fatex-actions__icon fatex-u-delete fa fa-trash" data-item="{{consequence._id}}"></i>
+                <i class="fatex-js-item-sort fatex-actions__icon fa fa-sort"></i>
+                <i class="fatex-js-consequence-settings fatex-actions__icon fa fa-cog" data-item="{{consequence._id}}"></i>
+                <i class="fatex-js-consequence-delete fatex-actions__icon fatex-u-delete fa fa-trash" data-item="{{consequence._id}}"></i>
             </div>
 
             <label class="fatex-text-input__label">{{consequence.data.label}}</label>
@@ -26,7 +26,7 @@
 
             {{#if consequence.isCondition}}
                 <label
-                    class="fatex-eb-consequence-checkbox fatex-checkbox fatex-checkbox--consequence"
+                    class="fatex-js-consequence-checkbox fatex-checkbox fatex-checkbox--consequence"
                     data-item="{{consequence._id}}"
                 >
                     <span class="fatex-checkbox__label">{{consequence.data.icon}}</span>
