--- a/system/templates/components/stress.hbs
+++ b/system/templates/components/stress.hbs
@@ -3,13 +3,13 @@
         class="{{#if stress.isDisabled}}fatex-u-disabled{{/if}}"
         data-item-id="{{stress._id}}"
     >
-        <header class="fatex-headline fatex-eb-sortable" data-item-id="{{stress._id}}">
+        <header class="fatex-headline fatex-js-sortable" data-item-id="{{stress._id}}">
             <h3 class="fatex-headline__text">{{stress.name}}</h3>
 
             <div class="fatex-actions fatex-actions--headline">
-                <i class="fatex-eb-item-sort fatex-actions__icon fa fa-sort"></i>
-                <i class="fatex-eb-stress-settings fatex-actions__icon fa fa-cog" data-item="{{stress._id}}"></i>
-                <i class="fatex-eb-stress-delete fatex-actions__icon fatex-u-delete fa fa-trash" data-item="{{stress._id}}"></i>
+                <i class="fatex-js-item-sort fatex-actions__icon fa fa-sort"></i>
+                <i class="fatex-js-stress-settings fatex-actions__icon fa fa-cog" data-item="{{stress._id}}"></i>
+                <i class="fatex-js-stress-delete fatex-actions__icon fatex-u-delete fa fa-trash" data-item="{{stress._id}}"></i>
             </div>
         </header>
 
@@ -22,7 +22,7 @@
         <div class="fatex-stress-track">
             {{#each stress.boxes as |box boxIndex|}}
                 <label
-                    class="fatex-eb-stress-checkbox fatex-checkbox"
+                    class="fatex-js-stress-checkbox fatex-checkbox"
                     data-index="{{boxIndex}}"
                     data-item="{{stress._id}}"
                 >
@@ -39,7 +39,7 @@
             {{/each}}
 
             {{#each stress.fillers}}
-                <div class="fatex-eb-stress-checkbox fatex-checkbox fatex-checkbox--filler"></div>
+                <div class="fatex-js-stress-checkbox fatex-checkbox fatex-checkbox--filler"></div>
             {{/each}}
         </div>
     </div>
