--- a/src/styles/components/copyright.scss
+++ b/src/styles/components/copyright.scss
@@ -3,5 +3,5 @@
     padding: $component-padding;
     font-size: 10px;
     text-align: center;
-    color: var(--primary-color, $primary-color);
+    color: var(--fatex-primary-color, $primary-color);
 }
