--- a/src/styles/components/headline.scss
+++ b/src/styles/components/headline.scss
@@ -1,8 +1,8 @@
 .fatex-headline {
     position: relative;
     margin-bottom: 0.5rem;
-    color: var(--light-text-color, $light-text-color);
-    background: var(--primary-color, $primary-color);
+    color: var(--fatex-light-text-color, $light-text-color);
+    background: var(--fatex-primary-color, $primary-color);
 
     &::before {
         @include cutout-top-left;
@@ -52,7 +52,7 @@
         transform: translate(-25px, 0px);
         font-weight: 900;
         color: $sheet-background;
-        -webkit-text-stroke: 2px var(--primary-color, $primary-color);
+        -webkit-text-stroke: 2px var(--fatex-primary-color, $primary-color);
         text-shadow: initial;
 
         &--skill {
