--- a/src/styles/components/inline-tabs.scss
+++ b/src/styles/components/inline-tabs.scss
@@ -13,7 +13,7 @@
         border-radius: 3px;
 
         &.active {
-            background: var(--primary-color, $primary-color);
+            background: var(--fatex-primary-color, $primary-color);
             color: $sheet-background;
             border: none;
         }
