--- a/src/styles/components/input.scss
+++ b/src/styles/components/input.scss
@@ -7,10 +7,10 @@ input[type="text"].fatex-text-input {
     background: transparent;
     border-radius: 3px;
     border: none;
-    border-bottom: 1px solid var(--primary-color, $primary-color);
+    border-bottom: 1px solid var(--fatex-primary-color, $primary-color);
 
     &::placeholder {
-        color: var(--primary-color, $primary-color);
+        color: var(--fatex-primary-color, $primary-color);
         opacity: 0.3;
     }
 
@@ -39,7 +39,7 @@ input[type="text"].fatex-text-input {
         transform: translate(-60%, -40%);
         font-weight: 900;
         font-size: 24px;
-        color: var(--primary-color, $primary-color);
+        color: var(--fatex-primary-color, $primary-color);
         text-shadow: 1px 1px 1px $sheet-background;
     }
 
@@ -47,7 +47,7 @@ input[type="text"].fatex-text-input {
         padding-left: $component-padding / 2;
         font-size: 8px;
         letter-spacing: 3px;
-        color: var(--primary-color, $primary-color);
+        color: var(--fatex-primary-color, $primary-color);
         text-transform: uppercase;
         white-space: nowrap;
 
@@ -70,7 +70,7 @@ input[type="number"].fatex-text-input--headline {
     padding: 5px;
     font-size: 13px;
     font-weight: bold;
-    color: var(--light-text-color, $light-text-color);
+    color: var(--fatex-light-text-color, $light-text-color);
     text-transform: uppercase;
     text-align: center;
     border: none;
