Updates the section heading bottom border to use the primary colour for the system. The intention is for users to have the ability to change this border along with the rest of the main system colours.

--- a/src/styles/components/headline.scss
+++ b/src/styles/components/headline.scss
@@ -96,6 +96,10 @@
         border: none;
         margin-bottom: $component-padding;
     }
+
+    h2 {
+        border-color: var(--fatex-primary-color, $primary-color);
+    }
 }
 
 .fatex-js-edit-mode {
