Adds a new set of SCSS variables for some of the new custom property hooks. Creates a new component template with the Powered By Fate logo as an inline SVG. Changes the SVG code of the logo to use a fill of currentColor, allowing it to be changed according to the header text colour. Updates all <img> versions of the logo with the new inline SVG template.

--- a/src/styles/abstract/variables.scss
+++ b/src/styles/abstract/variables.scss
@@ -15,3 +15,9 @@ $shadow-color: rgb(160, 160, 160);
 
 // Fonts
 $primary-font: "Montserrat", sans-serif;
+
+// Custom Property Hooks
+$fatex-header-color: var(--fatex-header-color, $primary-color);
+$fatex-header-text-color: var(--fatex-header-text-color, $light-text-color);
+
+$fatex-primary-color: var(--fatex-primary-color, $primary-color);
