--- a/system/templates/components/app-header.hbs
+++ b/system/templates/components/app-header.hbs
@@ -20,7 +20,7 @@
                 {{> centerPartial }}
             {{/if}}
 
-            <img class="fatex-header__logo" src="/systems/fatex/assets/logos/powered_by_fate.svg">
+            {{> "systems/fatex/templates/components/header-logo.hbs"}}
         </div>
 
         <div class="fatex-desk__content fatex-desk__content--app">
