--- a/system/templates/components/header.hbs
+++ b/system/templates/components/header.hbs
@@ -36,5 +36,5 @@
         </div>
     </div>
 
-    <img class="fatex-header__logo" src="/systems/fatex/assets/logos/powered_by_fate.svg">
+    {{> "systems/fatex/templates/components/header-logo.hbs"}}
 </header>
