--- a/system/templates/components/item-header.hbs
+++ b/system/templates/components/item-header.hbs
@@ -13,7 +13,7 @@
                 <div class="fatex-header__title">{{localize title}}</div>
             </div>
 
-            <img class="fatex-header__logo" src="/systems/fatex/assets/logos/powered_by_fate.svg">
+            {{> "systems/fatex/templates/components/header-logo.hbs"}}
         </div>
 
         <div class="fatex-desk__content">
