--- a/src/styles/components/actor-group/actor-group.scss
+++ b/src/styles/components/actor-group/actor-group.scss
@@ -16,7 +16,7 @@
         grid-area: footer;
         z-index: 10;
         padding: $component-padding / 2;
-        box-shadow: 0 -2px 15px 0 var(--fatex-primary-color, $primary-color);
+        box-shadow: 0 -2px 15px 0 $fatex-primary-color;
     }
 }
 
@@ -32,7 +32,7 @@
 
 .fatex__actor_group__sheet__navigation a {
     display: inline-block;
-    color: var(--fatex-primary-color, $primary-color);
+    color: $fatex-primary-color;
     padding: $component-padding/2 $component-padding * 2 $component-padding/2 $component-padding * 2;
     position: relative;
     font-weight: bold;
@@ -42,7 +42,7 @@
 
     &.active,
     &:hover {
-        background: var(--fatex-primary-color, $primary-color);
+        background: $fatex-primary-color;
         color: white;
     }
 }
