--- a/src/styles/components/apps/setup.scss
+++ b/src/styles/components/apps/setup.scss
@@ -72,7 +72,7 @@
         display: inline-block;
         width: 16px;
         height: 16px;
-        border: 1px solid var(--fatex-primary-color, $primary-color);
+        border: 1px solid $fatex-primary-color;
         border-radius: 3px;
         margin-right: $component-padding;
         color: var(--fatex-light-text-color, $light-text-color);
@@ -81,7 +81,7 @@
     }
 
     &:checked + &__box {
-        background: var(--fatex-primary-color, $primary-color);
+        background: $fatex-primary-color;
 
         &:before {
             content: "\f00c";
