--- a/src/styles/components/chat.scss
+++ b/src/styles/components/chat.scss
@@ -13,7 +13,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: var(--fatex-primary-color, $primary-color);
+    color: $fatex-primary-color;
 
     &__ladder {
         font-size: 12px;
