--- a/src/styles/components/checkbox.scss
+++ b/src/styles/components/checkbox.scss
@@ -3,7 +3,7 @@
     width: 30px;
     height: 30px;
     font-size: 24px;
-    border: 2px solid var(--fatex-primary-color, $primary-color);
+    border: 2px solid $fatex-primary-color;
     cursor: pointer;
 
     &__label {
@@ -13,7 +13,7 @@
         transform: translate(-60%, -40%);
         font-weight: 900;
         font-size: 24px;
-        color: var(--fatex-primary-color, $primary-color);
+        color: $fatex-primary-color;
         text-shadow: 1px 1px 1px $sheet-background;
     }
 
