--- a/src/styles/components/desk.scss
+++ b/src/styles/components/desk.scss
@@ -49,7 +49,7 @@
 
     &__sidebar {
         min-width: 240px;
-        box-shadow: 12px 0 15px 0 var(--fatex-primary-color, $primary-color);
+        box-shadow: 12px 0 15px 0 $fatex-primary-color;
     }
 
     &__tabloid {
