--- a/src/styles/components/scrollbar.scss
+++ b/src/styles/components/scrollbar.scss
@@ -10,17 +10,17 @@
 ::-webkit-scrollbar-thumb {
     outline: none;
     border-radius: 3px;
-    background: var(--fatex-primary-color, $primary-color) !important;
+    background: $fatex-primary-color !important;
     border: 0;
 }
 
 :root {
     scrollbar-width: thin !important;
-    scrollbar-color: var(--fatex-primary-color, $primary-color) $sheet-background !important;
+    scrollbar-color: $fatex-primary-color $sheet-background !important;
 }
 
 input[type="range"]::-webkit-slider-thumb {
-    background: var(--fatex-primary-color, $primary-color);
+    background: $fatex-primary-color;
     width: 18px;
     cursor: pointer;
     height: 25px;
@@ -28,7 +28,7 @@ input[type="range"]::-webkit-slider-thumb {
 }
 
 input[type="range"]::-moz-range-thumb {
-    background: var(--fatex-primary-color, $primary-color);
+    background: $fatex-primary-color;
     height: 25px;
     width: 18px;
     cursor: pointer;
