--- a/src/styles/components/tabs/tab-navigation.scss
+++ b/src/styles/components/tabs/tab-navigation.scss
@@ -4,9 +4,9 @@
     justify-content: space-around;
     font-size: 13px;
     font-weight: bold;
-    color: var(--fatex-primary-color, $primary-color);
+    color: $fatex-primary-color;
     text-transform: uppercase;
-    border-bottom: 2px solid var(--fatex-primary-color, $primary-color);
+    border-bottom: 2px solid $fatex-primary-color;
 
     &__item {
         position: relative;
@@ -14,7 +14,7 @@
 
         &.active,
         &:hover {
-            background: var(--fatex-primary-color, $primary-color);
+            background: $fatex-primary-color;
             color: var(--fatex-light-text-color, $light-text-color);
         }
 
@@ -30,7 +30,7 @@
     padding: $component-padding * 2 0;
 
     &__item {
-        color: var(--fatex-primary-color, $primary-color);
+        color: $fatex-primary-color;
         padding: $component-padding;
         text-transform: uppercase;
         margin-bottom: $component-padding * 2;
@@ -44,11 +44,11 @@
         &:hover {
             font-weight: bold;
             background: $sheet-background;
-            border: 1px solid var(--fatex-primary-color, $primary-color);
+            border: 1px solid $fatex-primary-color;
             border-right: 0;
             opacity: 1;
             z-index: 1;
-            box-shadow: 0 3px 0 0 var(--fatex-primary-color, $primary-color);
+            box-shadow: 0 3px 0 0 $fatex-primary-color;
         }
     }
 }
