Standardises the colour variables as hexadecimal. Adds a new sheet background colour SCSS variable which links to a new custom property. Makes use of transparent in the headline linear gradients to better enable theming. Updates all uses of the sheet-background SCSS variable with the new fatex-sheet-background-color variable.

--- a/src/styles/abstract/mixins.scss
+++ b/src/styles/abstract/mixins.scss
@@ -3,7 +3,7 @@
     position: absolute;
     top: -1px;
     left: -1px;
-    border-top: $size solid #f1f2f6;
+    border-top: $size solid $fatex-sheet-background-color;
     border-right: $size solid transparent;
 }
 
@@ -12,7 +12,7 @@
     position: absolute;
     top: -1px;
     right: -1px;
-    border-top: $size solid #f1f2f6;
+    border-top: $size solid $fatex-sheet-background-color;
     border-left: $size solid transparent;
 }
 
@@ -21,7 +21,7 @@
     position: absolute;
     bottom: -1px;
     right: -1px;
-    border-bottom: $size solid #f1f2f6;
+    border-bottom: $size solid $fatex-sheet-background-color;
     border-left: $size solid transparent;
 }
 
