--- a/src/styles/base/foundry-ui.scss
+++ b/src/styles/base/foundry-ui.scss
@@ -8,6 +8,6 @@
 #chat-controls div.roll-type-select select,
 .sidebar-tab .directory-header .header-search input,
 #chat-form .cm-s-easymde {
-    background: $sheet-background;
+    background: $fatex-sheet-background-color;
     color: var(--fatex-primary-text-color, $primary-text-color);
 }
