--- a/src/styles/components/checkbox.scss
+++ b/src/styles/components/checkbox.scss
@@ -14,7 +14,7 @@
         transform: translate(-60%, -40%);
         font-weight: 900;
         font-size: 24px;
-        text-shadow: 1px 1px 1px $sheet-background;
+        text-shadow: 1px 1px 1px $fatex-sheet-background-color;
     }
 
     &__icon {
