--- a/src/styles/components/dialog.scss
+++ b/src/styles/components/dialog.scss
@@ -7,7 +7,7 @@
 
     .window-content {
         padding: $component-padding;
-        background: $sheet-background;
+        background: $fatex-sheet-background-color;
     }
 
     .dialog-buttons {
