--- a/src/styles/components/inline-tabs.scss
+++ b/src/styles/components/inline-tabs.scss
@@ -14,7 +14,7 @@
 
         &.active {
             background: $fatex-primary-color;
-            color: $sheet-background;
+            color: $fatex-sheet-background-color;
             border: none;
         }
     }
