--- a/src/styles/components/scrollbar.scss
+++ b/src/styles/components/scrollbar.scss
@@ -16,7 +16,7 @@
 
 :root {
     scrollbar-width: thin !important;
-    scrollbar-color: $primary-color $sheet-background !important;
+    scrollbar-color: $primary-color $fatex-sheet-background-color !important;
 }
 
 input[type="range"]::-webkit-slider-thumb {
