--- a/src/styles/components/sheet/sheet.scss
+++ b/src/styles/components/sheet/sheet.scss
@@ -15,7 +15,7 @@
 
     .window-content {
         padding: 0;
-        background: $sheet-background;
+        background: $fatex-sheet-background-color;
         overflow-y: hidden;
     }
 
