--- a/src/styles/components/tabs/tab-navigation.scss
+++ b/src/styles/components/tabs/tab-navigation.scss
@@ -43,7 +43,7 @@
         &.active,
         &:hover {
             font-weight: bold;
-            background: $sheet-background;
+            background: $fatex-sheet-background-color;
             border: 1px solid $fatex-primary-color;
             border-right: 0;
             opacity: 1;
