--- a/src/styles/legacy/chat.scss
+++ b/src/styles/legacy/chat.scss
@@ -33,7 +33,7 @@
     transform: translate(-25px, 0px);
     font-weight: 900;
     font-size: 24px;
-    color: $sheet-background;
+    color: $fatex-sheet-background-color;
     -webkit-text-stroke: 2px $fatex-primary-color;
     text-shadow: initial;
 }
