--- a/src/styles/components/headline.scss
+++ b/src/styles/components/headline.scss
@@ -51,7 +51,7 @@
         z-index: 100;
         transform: translate(-25px, 0px);
         font-weight: 900;
-        color: $sheet-background;
+        color: $fatex-sheet-background-color;
         -webkit-text-stroke: 2px $fatex-primary-color;
         text-shadow: initial;
 
@@ -59,7 +59,7 @@
             left: initial;
             right: 100%;
             font-size: 24px;
-            text-shadow: 1px 1px 1px $sheet-background;
+            text-shadow: 1px 1px 1px $fatex-sheet-background-color;
             transform: translate(15px, -7px);
         }
 
