--- a/src/styles/components/input.scss
+++ b/src/styles/components/input.scss
@@ -40,7 +40,7 @@ input[type="text"].fatex-text-input {
         font-weight: 900;
         font-size: 24px;
         color: $fatex-primary-color;
-        text-shadow: 1px 1px 1px $sheet-background;
+        text-shadow: 1px 1px 1px $fatex-sheet-background-color;
     }
 
     &__label {
