--- a/src/styles/components/radio.scss
+++ b/src/styles/components/radio.scss
@@ -44,7 +44,7 @@
     color: $fatex-primary-color;
     font-weight: 900;
     font-size: 24px;
-    text-shadow: 1px 1px 1px $sheet-background;
+    text-shadow: 1px 1px 1px $fatex-sheet-background-color;
 
     &--active {
         background: none;
