--- a/src/styles/components/slider.scss
+++ b/src/styles/components/slider.scss
@@ -8,7 +8,7 @@
         font-size: 24px;
         font-weight: 900;
         text-align: center;
-        text-shadow: 1px 1px 1px $sheet-background;
+        text-shadow: 1px 1px 1px $fatex-sheet-background-color;
         background: none;
         border: none;
     }
