--- a/src/styles/fatex.scss
+++ b/src/styles/fatex.scss
@@ -10,6 +10,6 @@
 
 @import "utils/disabled";
 @import "utils/effects";
-@import "utils/padding";
 @import "utils/position";
 @import "utils/sizing";
+@import "utils/spacing";
