Modifies the scrollbar styles so that only FateX sheets and apps are affected. Removes a selector targeting the chat text area. Adds a new selector to target the chat header line. Adds a new SCSS variable for the scrollbar pill colour.

--- a/src/styles/abstract/variables.scss
+++ b/src/styles/abstract/variables.scss
@@ -22,3 +22,4 @@ $fatex-header-text-color: var(--fatex-header-text-color, $light-text-color);
 
 $fatex-primary-color: var(--fatex-primary-color, $primary-color);
 $fatex-sheet-background-color: var(--fatex-sheet-background-color, $sheet-background);
+$fatex-scrollbar-color: var(--fatex-scrollbar-color, $primary-color);
